Use standard css property for word wrapping, fix invite popup appearance on mobile

--- a/frontend/src/components/retro-formats/timeline/events-editor/EventListEditor.css
+++ b/frontend/src/components/retro-formats/timeline/events-editor/EventListEditor.css
@@ -121,7 +121,7 @@
   .timeline {
     list-style: none;
     margin: 16px 0 16px 32px;
-    word-wrap: break-word;
+    overflow-wrap: break-word;
 
     & li {
       position: relative;
